# pico-boilerplate

./: CMakeLists.txt  README.md  main.c
